Change usage of MiB to MB

--- a/sections/03-the-architecture-of-the-safe-network.tex
+++ b/sections/03-the-architecture-of-the-safe-network.tex
@@ -11,7 +11,7 @@ The only time a user interacts with their \textit{vault} is through configuratio
 
 \section{Immutable and Mutable Data}
 
-Similar to BitTorrent data is broken down into chunks. Each ``chunk'' of data that is stored on the SAFE Network is at most 1MiB in size and has a unique 256-Bit Address. This allows every chunk of data to be uniquely identified and helps \textit{vaults} to decide who stores what data. Data stored on the SAFE Network can take one of two forms. It can either be \textit{Immutable Data} or \textit{Mutable Data}. A Mutable Data Structure (MD) is a \textit{key value} storage mechanism that allows for the storage of one thousand entries. An Immutable Data structure only stores a single ``value'', its address derived from the hash of the binary data it contains. An Immutable Data structure can itself only be 1MiB in size, but through the use of a \textit{Data Map} (Section \ref{subsec:self-encryption-data-map}) this limit can be subverted. As their names imply, Mutable Data can be freely mutated whereas Immutable Data cannot. It is this property of Immutable Data that eliminates duplication on the network. For example, if Bob uploads a picture to the network he is presented with the address of that file (possibly the address of a \textit{data-map}) and will have the relevant keys to access it. If Alice then uploads the exact same picture the data is not duplicated, she is simply presented with the same information that Bob was. If either Bob or Alice chooses to ``delete'' the picture, then they simply ``forget'' how to access that data. This means that if someone has access to a piece of data then that ability will never be revoked.
+Similar to BitTorrent data is broken down into chunks. Each ``chunk'' of data that is stored on the SAFE Network is at most 1MB in size and has a unique 256-Bit Address. This allows every chunk of data to be uniquely identified and helps \textit{vaults} to decide who stores what data. Data stored on the SAFE Network can take one of two forms. It can either be \textit{Immutable Data} or \textit{Mutable Data}. A Mutable Data Structure (MD) is a \textit{key value} storage mechanism that allows for the storage of one thousand entries. An Immutable Data structure only stores a single ``value'', its address derived from the hash of the binary data it contains. An Immutable Data structure can itself only be 1MB in size, but through the use of a \textit{Data Map} (Section \ref{subsec:self-encryption-data-map}) this limit can be subverted. As their names imply, Mutable Data can be freely mutated whereas Immutable Data cannot. It is this property of Immutable Data that eliminates duplication on the network. For example, if Bob uploads a picture to the network he is presented with the address of that file (possibly the address of a \textit{data-map}) and will have the relevant keys to access it. If Alice then uploads the exact same picture the data is not duplicated, she is simply presented with the same information that Bob was. If either Bob or Alice chooses to ``delete'' the picture, then they simply ``forget'' how to access that data. This means that if someone has access to a piece of data then that ability will never be revoked.
 
 \subsection{Self Encryption and Data Maps}
 \label{subsec:self-encryption-data-map}
@@ -24,7 +24,7 @@ Similar to BitTorrent data is broken down into chunks. Each ``chunk'' of data th
 	\end{center}
 \end{figure}
 
-Data that is stored on the SAFE Network goes through a process called \textit{Self Encryption}\cite{irvine2010self}. During \textit{self encryption} data is broken down into chunks of a specified size (The SAFE Network uses 1MiB chunks). To be able to reassemble and read the data a structure known as a \textit{Data Map} is created during the process. The \textit{Data Map} contains several pieces of information:
+Data that is stored on the SAFE Network goes through a process called \textit{Self Encryption}\cite{irvine2010self}. During \textit{self encryption} data is broken down into chunks of a specified size (The SAFE Network uses 1MB chunks). To be able to reassemble and read the data a structure known as a \textit{Data Map} is created during the process. The \textit{Data Map} contains several pieces of information:
 
 \begin{itemize}
 	\item chunk\_num u32: Specifies how many chunks of data are within the Data Map
@@ -49,7 +49,7 @@ Once data has been written to the network, it can never be changed. The chunks o
 
 \section{Disjoint Sections}
 
-The unique address of every 1MiB chunk of data is used to determine what \textit{vaults} are responsible for storing it. Maidsafe's innovation was in the creation of what are called \textit{Disjoint Sections}. These \textit{sections} are groups of \textit{vaults} that are responsible for a certain range of the 256-Bit XOR Address Space. By default, the network requires a minimum number of \textit{vaults} to sustain the network. At the time of writing this is eight \textit{vaults}. These eight \textit{vaults} form a complete \textit{section} and are responsible for the storage of the entire 256-Bit address range. As more \textit{vaults} join the network, this \textit{section} will grow in size and then eventually split into two new \textit{sections}. There are numerous requirements that have to be met before a \textit{section split} is allowed.
+The unique address of every 1MB chunk of data is used to determine what \textit{vaults} are responsible for storing it. Maidsafe's innovation was in the creation of what are called \textit{Disjoint Sections}. These \textit{sections} are groups of \textit{vaults} that are responsible for a certain range of the 256-Bit XOR Address Space. By default, the network requires a minimum number of \textit{vaults} to sustain the network. At the time of writing this is eight \textit{vaults}. These eight \textit{vaults} form a complete \textit{section} and are responsible for the storage of the entire 256-Bit address range. As more \textit{vaults} join the network, this \textit{section} will grow in size and then eventually split into two new \textit{sections}. There are numerous requirements that have to be met before a \textit{section split} is allowed.
 
 % Insert equation for section split
 
@@ -91,7 +91,7 @@ A single login secures all of their data behind multiple layers of encryption me
 
 \textit{Crust} is the secure routing layer designed and built by Maidsafe to provide the secure communications backbone of the SAFE Network. \textit{Crust} allows for reliable P2P connections and provides encryption for all traffic. Several Transmission Protocols can be used, falling back to UDP from TCP (for example) if required. Encryption at this level means that Data on the network is always encrypted, data is only decrypted client side and whenever it is not on a clients computer it is fully encrypted.
 
-Encryption is a very important aspect of the SAFE Network. Whenever data is stored on the network, it is encrypted. Data on the network exists as discrete 1Mb chunks, each with its own 256-Bit Address. When a file is uploaded to the network, it undergoes a process known as \textit{self encryption}. As mentioned in Section \ref{subsec:self-encryption}, \textit{Self Encryption} is a technique that is used to break data down into 1MiB chunks and also to encrypt each chunk. These are the chunks that are ultimatly stored by \textit{vaults}. You can choose to have data ``unencrypted'' or what Maidsafe calls ``Plain'', what this means is that any user that knows the address of the data (and the type-tag) can retrieve and read the data. The special thing about this is that the data is still fully encrypted on the network through \textit{self encryption}, a \textit{vault} owner cannot decipher what the chunk of data holds. When anyone goes to access this data though, it is reassembled and you can read it. The two other types of encryption supported are Symmetric and Asymmetric. Through different key exchange mechanisms you can use these forms of encryption to build interesting applications.
+Encryption is a very important aspect of the SAFE Network. Whenever data is stored on the network, it is encrypted. Data on the network exists as discrete 1Mb chunks, each with its own 256-Bit Address. When a file is uploaded to the network, it undergoes a process known as \textit{self encryption}. As mentioned in Section \ref{subsec:self-encryption}, \textit{Self Encryption} is a technique that is used to break data down into 1MB chunks and also to encrypt each chunk. These are the chunks that are ultimatly stored by \textit{vaults}. You can choose to have data ``unencrypted'' or what Maidsafe calls ``Plain'', what this means is that any user that knows the address of the data (and the type-tag) can retrieve and read the data. The special thing about this is that the data is still fully encrypted on the network through \textit{self encryption}, a \textit{vault} owner cannot decipher what the chunk of data holds. When anyone goes to access this data though, it is reassembled and you can read it. The two other types of encryption supported are Symmetric and Asymmetric. Through different key exchange mechanisms you can use these forms of encryption to build interesting applications.
 
 \begin{figure}
 	\begin{center}
@@ -101,7 +101,7 @@ Encryption is a very important aspect of the SAFE Network. Whenever data is stor
 	\end{center}
 \end{figure}
 
-When a client connects to the network they do so through the use of a \textit{Proxy Node}. A \textit{Proxy Node} is a \textit{vault} that is used to liaise between a client and the network at large. The \textit{Proxy Node} is used to hide the clients IP address from the rest of the network. Beyond the proxy and deeper into the network all \textit{vaults} know is the XOR Address of the account being used and its Public Key. Hence by using a \textit{Proxy Node}, the real world identity of the client is well hidden from the rest of the network. This means that a given \textit{vault} cannot detect that the data it is sending is going to a certain geographical location. In Figure \ref{fig:proxy-connection} you can see the topology of how a client connects to the SAFE Network.
+When a client connects to the network they do so through the use of a \textit{Proxy Node}. A \textit{Proxy Node} is a \textit{vault} that is used to liaise between a client and the network at large. The \textit{Proxy Node} is used to hide the clients IP address from the rest of the network. Deeper into the network, \textit{vaults} communicate directly with this \textit{Proxy Node} and not the client. Hence by using a \textit{Proxy Node}, the real world identity of the client is well hidden from the rest of the network. This means that a given \textit{vault} cannot detect that the data it is sending is going to a certain geographical location. In Figure \ref{fig:proxy-connection} you can see the topology of how a client connects to the SAFE Network.
 
 \section{Network Incentives, Safecoin and Farming}
 
