Fix issues with MD and ID explanations
There were some technical inaccuracies when it came to explaining
Immutable and Mutable Data Structures. This has now been fixed so the
dissertation contains what I now feel to be a very solid and accurate
technical explanation of them.

I have added a specific section on MD's which is really sweeeeeet. It
explains how websties work and how you could have an email ``indbox'' on
the network.

--- a/sections/03-the-architecture-of-the-safe-network.tex
+++ b/sections/03-the-architecture-of-the-safe-network.tex
@@ -1,7 +1,7 @@
 \chapter{The Architecture of the SAFE Network}
 \label{ch:architecture}
 
-The internet is constantly growing and changing. Changes in technologies slowly permeate throughout the network as if by osmosis. Governmental policy can have a large impact on how people interact with the network, whether that be Turkey blocking Wikipedia or the US abandoning Net Neutrality. This area is where the SAFE Network starts to deviate greatly from the \textit{traditional} internet. The SAFE Network is a 'Autonomous Data Network'. To have access to the SAFE Network means to have access to all of it. A government cannot curate access data. This is made possible by the architecture of the SAFE Network.
+The internet is constantly growing and changing. Changes in technologies slowly permeate throughout the network as if by osmosis. Governmental policy can have a large impact on how people interact with the network, whether that be Turkey blocking Wikipedia or the US abandoning Net Neutrality. This area is where the SAFE Network starts to deviate greatly from the \textit{traditional} internet. The SAFE Network is a ``Autonomous Data Network''. To have access to the SAFE Network means to have access to all of it. A government cannot curate access data. This is made possible by the architecture of the SAFE Network.
 
 \section{Vaults and Clients}
 
@@ -11,7 +11,7 @@ The only time a user interacts with their \textit{vault} is through configuratio
 
 \section{Immutable and Mutable Data}
 
-Similar to BitTorrent data is broken down into chunks. Each ``chunk'' of data that is stored on the SAFE Network is at most 1MB in size and has a unique 256-Bit Address. This allows every chunk of data to be uniquely identified and helps \textit{vaults} to decide who stores what data. Data stored on the SAFE Network can take one of two forms. It can either be \textit{Immutable Data} or \textit{Mutable Data}. A Mutable Data Structure (MD) is a \textit{key value} storage mechanism that allows for the storage of one thousand entries. An Immutable Data structure only stores a single ``value'', its address derived from the hash of the binary data it contains. An Immutable Data structure can itself only be 1MB in size, but through the use of a \textit{Data Map} (Section \ref{subsec:self-encryption-data-map}) this limit can be subverted. As their names imply, Mutable Data can be freely mutated whereas Immutable Data cannot. It is this property of Immutable Data that eliminates duplication on the network. For example, if Bob uploads a picture to the network he is presented with the address of that file (possibly the address of a \textit{data-map}) and will have the relevant keys to access it. If Alice then uploads the exact same picture the data is not duplicated, she is simply presented with the same information that Bob was. If either Bob or Alice chooses to ``delete'' the picture, then they simply ``forget'' how to access that data. This means that if someone has access to a piece of data then that ability will never be revoked.
+Similar to BitTorrent data is broken down into chunks. Each ``chunk'' of data that is stored on the SAFE Network is at most 1MB in size and has a unique 256-Bit Address. This allows every chunk of data to be uniquely identified and helps \textit{vaults} to decide who stores what data. Data stored on the SAFE Network can take one of two forms. It can either be \textit{Immutable Data} or \textit{Mutable Data}. A Mutable Data Structure (MD) is a \textit{key value} storage mechanism that allows for the storage of one thousand entries. An Immutable Data structure only stores a single ``value'', its address derived from the hash of the binary data it contains. An Immutable Data structure can itself only be 1MB in size, but through the use of a \textit{Data Map} (Section \ref{subsec:self-encryption-data-map}) this limit can be subverted. As their names imply, Mutable Data can be freely mutated whereas Immutable Data cannot. It is this property of Immutable Data that eliminates duplication on the network. For example, if Bob uploads a picture to the network he is presented with the address of that file (the address of a \textit{Data Map}) and will have the relevant keys to access it. If Alice then uploads the exact same picture the data is not duplicated, she is simply presented with another \textit{Data Map} to the data. If either Bob or Alice chooses to ``delete'' the picture, then they simply ``forget'' how to access that \textit{Data Map}. This means that if someone has access to a piece of data then that ability will never be revoked.
 
 \subsection{Self Encryption and Data Maps}
 \label{subsec:self-encryption-data-map}
@@ -24,7 +24,7 @@ Similar to BitTorrent data is broken down into chunks. Each ``chunk'' of data th
 	\end{center}
 \end{figure}
 
-Data that is stored on the SAFE Network goes through a process called \textit{Self Encryption}\cite{irvine2010self}. During \textit{self encryption} data is broken down into chunks of a specified size (The SAFE Network uses 1MB chunks). To be able to reassemble and read the data a structure known as a \textit{Data Map} is created during the process. The \textit{Data Map} contains several pieces of information:
+Immutable Data that is stored on the SAFE Network goes through a process called \textit{Self Encryption}\cite{irvine2010self}. During \textit{self encryption} data is broken down into chunks of a specified size (The SAFE Network uses 1MB chunks). To be able to reassemble and read the data a structure known as a \textit{Data Map} is created during the process. The \textit{Data Map} contains several pieces of information:
 
 \begin{itemize}
 	\item chunk\_num u32: Specifies how many chunks of data are within the Data Map
@@ -33,9 +33,9 @@ Data that is stored on the SAFE Network goes through a process called \textit{Se
 	\item source\_size u64: The size of the original piece of data, before any encryption has taken place
 \end{itemize}
 
-The crucial structures of this \textit{Data Map} are the two vectors that store the pre-encryption and post-encryption hashes of chunks. The encrypted chunks of data are derived through the process of \textit{self-encryption}. What happens first is a piece of data is broken down into chunks and then hashed. The hash of the chunks is stored in the `pre\_hash Vec\textless u8\textgreater' of the \textit{Data Map}. This list is important as it defines the original piece of data before being encrypted. Each chunk then goes through an encryption process using AES 256. The key used for each chunk is the pre-encryption hash of one of the other chunks. The chunks then go through another step that further obfuscates the data. This step involves XOR'ing the data with the pre encryption hash of other chunks. A final hash is then taken of each chunk and stored in the `hash Vec\textless u8\textgreater' of the \textit{Data Map}. You can see the process of \textit{self encryption} in Figure \ref{fig:self-encryption}.
+The crucial structures of this \textit{Data Map} are the two vectors that store the pre-encryption and post-encryption hashes of chunks. The encrypted chunks of data are derived through the process of \textit{self encryption}. What happens first is a piece of data is broken down into chunks and then hashed. The hash of the chunks is stored in the `pre\_hash Vec\textless u8\textgreater' of the \textit{Data Map}. This list is important as it defines the original piece of data before being encrypted. Each chunk then goes through an encryption process using AES 256. The key used for each chunk is the pre-encryption hash of one of the other chunks. The chunks then go through another step that further obfuscates the data. This step involves XOR'ing the data with the pre encryption hash of other chunks. A final hash is then taken of each chunk and stored in the `hash Vec\textless u8\textgreater' of the \textit{Data Map}. You can see the process of \textit{self encryption} in Figure \ref{fig:self-encryption}.
 
-\textit{Self Encryption} is a generic process, there is nothing about it that specifically ties it to the SAFE Network. \textit{Self Encryption} is used to obfuscate data for storage, It is only with access to the \textit{Data Map} that you can make sense of the data. It is through this obfuscation process that means \textit{vaults} cannot distinguish what the chunks they are storing actually contain. It is just ``garbage'' data to them. This means chunks can be freely distributed across the network with the assurance that only the person with access to the \textit{Data Map} can read the original data.
+\textit{Self Encryption} is a generic process, there is nothing about it that specifically ties it to the SAFE Network. \textit{Self Encryption} is used to obfuscate data for storage, It is only with access to the \textit{Data Map} that you can make sense of the data. It is through this obfuscation process that means \textit{vaults} cannot distinguish what the chunks they are storing actually contain. It is just ``garbage'' data to them. This means chunks can be freely distributed across the network with the assurance that only the person with access to the \textit{Data Map} can read the original data. To secure access to the \textit{Data Map} it can be encrypted using either a symmetric key or an asymmetric key-pair. With different key-exchange mechanisms users can then freely share access to \textit{Data Maps} with one another.
 
 \subsection{Address Collision}
 \label{subsec:address-collision}
@@ -45,13 +45,19 @@ The SAFE Network stores chunks based on their 256-Bit address. Although the prob
 \subsection{True Immutability of Data}
 \label{subsec:immutability-of-data}
 
-Once data has been written to the network, it can never be changed. The chunks of data that are the result of \textit{self encryption} will be stored by the network indefinitely. This means that to ``delete'' data more accurately means to ``forget how to access it''. The implication of this is that once data is uploaded, access to the \textit{Data Map} is the only think that stands between being able to access the data and it being lost forever. This has big implications and benefits to some use cases, think archiving books or genealogical records.
+Once Immutable Data has been written to the network it can never be changed. The chunks of data that are the result of \textit{self encryption} will be stored by the network indefinitely. This means that to ``delete'' data more accurately means to ``forget how to access it''. The implication of this is that once data is uploaded, access to the \textit{Data Map} is the only thing that stands between being able to access the data and it being lost forever. Fundamentally not having any mechanism to delete Immutable Data poses problems to some applications.
+
+\subsection{Mutable Data}
+
+A Mutable Data Structure allows a far more complex ``permission scheme'' to data and is controlled by the user who creates it. Unlike Immutable Data, Mutable Data doesn't have to live at the hash of its chunk. For Immutable Data, the location of the ``data'' is actually the address of the chunk that contains the \textit{Data Map}. The hash of the \textit{Data Map} is the address of that chunk. There is no such limit on Mutable Data and you can store it at any empty address on the network. As the name implies, the special thing about Mutable Data is that it can be mutated. You can change its contents.
+
+The permission scheme around MD is what gives it its utility. The ``owner'' of the MD can specify exactly who can perform what actions to the MD structure. The generic actions that can be performed are: insert, update, delete and change permissions. To give an example, You could have an email address or chat facility on the network that has an ``inbox'' MD structure. What would then happen is that anyone would have the permission to ``insert'' to the MD but nobody would have any of the other permissions apart from the original owner. Using asymmetric encryption they could then encrypt the inserts to the structure so that only the ``owner'' of the MD is able to read the entries. As MD structures don't need to live in a chunk thats address corresponds to the hash of the chunk, they can be at custom locations. So to find the ``inbox'' for someone is as simple as taking the SHA3-256 hash of their username/email-address and then ``inserting'' messages to the corresponding MD.
+
+So it is this permission scheme that allows complex and dynamic applications to be built whilst giving users the ability to still control their ``own'' data. For instance, they might have a public blog with a comments section on one of the pages. Users could ``insert'' comments that might be readable by all. The ``owner'' of the blog however could maintain the sole right to ``delete'' comments or stop commenting altogether. Another popular usage is the creation of websites. As MD structures can be mutated, they can be used to direct clients towards files that are Immutable Data. For instance, if a user visits a website the MD that points to the HTML, CSS, etc, can be found at the SHA3-256 of the URL. As it is a MD the ``owners'' of the website can simply update this index to point to newer revisions of the website files when they wish to update the website itself.
 
 \section{Disjoint Sections}
 
 The unique address of every 1MB chunk of data is used to determine what \textit{vaults} are responsible for storing it. Maidsafe's innovation was in the creation of what are called \textit{Disjoint Sections}. These \textit{sections} are groups of \textit{vaults} that are responsible for a certain range of the 256-Bit XOR Address Space. By default, the network requires a minimum number of \textit{vaults} to sustain the network. At the time of writing this is eight \textit{vaults}. These eight \textit{vaults} form a complete \textit{section} and are responsible for the storage of the entire 256-Bit address range. As more \textit{vaults} join the network, this \textit{section} will grow in size and then eventually split into two new \textit{sections}. There are numerous requirements that have to be met before a \textit{section split} is allowed.
-
-% Insert equation for section split
 
 \begin{figure}
 	\begin{center}
@@ -66,13 +72,13 @@ After a split, \textit{sections} are then responsible for half of the 256-Bit ad
 \section{Proof of Resource}
 \label{subsec:proof-of-resource}
 
-The \textit{proof of resource} (PoR) test is used to valid the effectiveness of a \textit{vaults} ability to store and serve data and is the value proposition of \textit{Safecoin}. The PoR is used to validate \textit{vaults} joining the network but also during other network events. Such an event is proving to its \textit{section} that it is indeed storing the data it says it is.
+The \textit{proof of resource} (PoR) test is used to valid the effectiveness of a \textit{vaults} ability to store and serve data and is the value proposition of \textit{Safecoin}. PoR is used during certain events, such as a \textit{vault} joining the network, to validate that it can adequately perform its job. \textit{Vaults} will further be asked to perform a PoR during random network events, this means that \textit{Vaults} will be continually tested to check that they haven't lost the ability to serve the network.
 
 \section{Personas}
 
-\textit{Vaults} can be characterised as having different ``Personas''. One such \textit{persona} is the \textit{Data Manager}. A \textit{Data Manager} is responsible for the storage of chunks within a a\\textit{section}. Their job is vital to the stability of the network. When data is stored on the network, it is actually replicated across multiple \textit{Data Managers}. At all times the network aims to keep a minimum number of copies of a chunk of data, if a chunk goes missing this chunk is replicated to another \textit{Data Manager} to ensure that data is stored redundantly. Hence within a given section, there will be several vaults storing identical chunks of data. Each having full knowledge of the chunks of data that the other \textit{Data Manager} hold. This scheme means that no \textit{vault} will ever hold the single copy of a chunk of data, meaning that data is stored redundantly across the network.
+\textit{Vaults} can be characterised as having different ``Personas''. One such \textit{persona} is the \textit{Data Manager}. A \textit{Data Manager} is responsible for the curation of data chunks within a given \textit{section}. Their job is vital to the stability of the network. When data is stored on the network, it is actually replicated across multiple \textit{Data Managers}. At all times the network aims to keep a minimum number of copies of a chunk of data, if a chunk goes missing this chunk is replicated to another \textit{Data Manager} to ensure that data is stored redundantly. Hence within a given section, there will be several vaults storing identical chunks of data. Each having full knowledge of the chunks of data that the other \textit{Data Manager's} hold. This scheme means that no \textit{vault} will ever hold the single copy of a chunk of data, meaning that data is stored redundantly across the network.
 
-Another important \textit{persona} is that of the \textit{Client Manager}. A \textit{Client Manager} is responsible for storing the account data for clients that fall within its address space. When you create an account on the SAFE Network the data is stored on the network just like any other piece of data. It has a given 256-Bit Address and contains information like: how much \textit{Safecoin} an account has, the number of chunks of data that has been uploaded, etc. As an account is a 256-Bit address it will fall within the domain of a particular section, the \textit{Client Managers} in that \textit{section} will then store the relevant data.
+Another important \textit{persona} is that of the \textit{Client Manager}. A \textit{Client Manager} is responsible for storing the account data for clients that fall within its address space. It is also responsible for liaising with the rest of the network on behalf of that account.  When you create an account on the SAFE Network the data is stored on the network just like any other piece of data. It has a given 256-Bit Address and contains information like: how much \textit{Safecoin} an account has, the number of chunks of data that has been uploaded, etc.
 
 \section{Accounts}
 
@@ -91,7 +97,7 @@ A single login secures all of their data behind multiple layers of encryption me
 
 \textit{Crust} is the secure routing layer designed and built by Maidsafe to provide the secure communications backbone of the SAFE Network. \textit{Crust} allows for reliable P2P connections and provides encryption for all traffic. Several Transmission Protocols can be used, falling back to UDP from TCP (for example) if required. Encryption at this level means that Data on the network is always encrypted, data is only decrypted client side and whenever it is not on a clients computer it is fully encrypted.
 
-Encryption is a very important aspect of the SAFE Network. Whenever data is stored on the network, it is encrypted. Data on the network exists as discrete 1Mb chunks, each with its own 256-Bit Address. When a file is uploaded to the network, it undergoes a process known as \textit{self encryption}. As mentioned in Section \ref{subsec:self-encryption}, \textit{Self Encryption} is a technique that is used to break data down into 1MB chunks and also to encrypt each chunk. These are the chunks that are ultimatly stored by \textit{vaults}. You can choose to have data ``unencrypted'' or what Maidsafe calls ``Plain'', what this means is that any user that knows the address of the data (and the type-tag) can retrieve and read the data. The special thing about this is that the data is still fully encrypted on the network through \textit{self encryption}, a \textit{vault} owner cannot decipher what the chunk of data holds. When anyone goes to access this data though, it is reassembled and you can read it. The two other types of encryption supported are Symmetric and Asymmetric. Through different key exchange mechanisms you can use these forms of encryption to build interesting applications.
+Encryption is a very important aspect of the SAFE Network. Whenever data is stored on the network, it is encrypted. Data on the network exists as discrete 1MB chunks, each with its own 256-Bit Address. When a file is uploaded to the network, it undergoes a process known as \textit{self encryption}. As mentioned in Section \ref{subsec:self-encryption}, \textit{Self Encryption} is a technique that is used to break data down into 1MB chunks and also to encrypt each chunk. Meaning that \textit{vaults} cannot decipher what chunks of data mean. Ultimately access to data is at the discretion of the user creating that data. You can choose to have access to data be ``public'', which means that anyone that has the correct address can read the data (whether it be Immutable or Mutable Data). This would be the case for things like websites. For private data however, you can choose to encrypt it. In the case of Immutable Data, this would be encrypting the \textit{Data Map} so that only the users who know the relevant key can reassemble the data it leads to.
 
 \begin{figure}
 	\begin{center}
@@ -113,7 +119,7 @@ When a user creates an account on the network, they are given a \textit{Safecoin
 
 The economics of \textit{Safecoin} are a subject that is out-with the scope of this paper. In short, its utility on the SAFE Network is not tied to whatever its `exchange price' is. Overtime, the storage `buying power' of each \textit{Safecoin} should increase as computing power and storage becomes cheaper. \textit{Safecoin} is in its infancy and indeed has not yet been implemented. This means it is subject to changes (however this is unlikely) from what has been described above. There are proposals upon how to build the \textit{Safecoin} support structure into the SAFE Network but as it has not been implemented yet it will be avoided in this paper.
 
-The absence of concrete information on how \textit{Safecoin} will function is troublesome. Things like the total cap on coins issued is not clearly defined and how much data will cost isn't either. Another feature that has been discussed is application developers being able to hard code their \textit{Safecoin} wallet address into their website/application. What would then happen is that as their product is used, they would receive a stream of revenue that relates to how popular it is. In \citetitle{lambert2015safecoin}\cite{lambert2015safecoin} it is said that "based on how much the application is used, the network will pay safecoins to the safecoin wallet address of the app creator. This provides a built in revenue stream for app developers, one that is directly proportional to how successful their application is." Although general ideas and outlines are specified in the whitepaper on Safecoin, the specifics of how a lot of this will operate is not specified. This is mainly because it has not been implemented yet. Thus careful attention to how \textit{Safecoin} is implemented is very crucial to the success of the network. Without proper incentives it will be difficult to get people to run \textit{vaults} and use the network. The success of \textit{Safecoin} is thus vital to the success of the SAFE Network.
+The absence of concrete information on how \textit{Safecoin} will function is troublesome. Things like the total cap on coins issued is not clearly defined and how much data will cost isn't either. Another feature that has been discussed is application developers being able to hard code their \textit{Safecoin} wallet address into their website/application. What would then happen is that as their product is used, they would receive a stream of revenue that relates to how popular it is. In \citetitle{lambert2015safecoin}\cite{lambert2015safecoin} it is said that "based on how much the application is used, the network will pay safecoins to the safecoin wallet address of the app creator. This provides a built in revenue stream for app developers, one that is directly proportional to how successful their application is." Although general ideas and outlines are specified in the whitepaper on Safecoin, the specifics of how a lot of this will operate is not specified. Thus careful attention to how \textit{Safecoin} is implemented is very crucial to the success of the network. Without proper incentives and a working economy it will be difficult to get people to run \textit{vaults} and use the network. The success of \textit{Safecoin} is thus vital to the success of the SAFE Network.
 
 \section{Quorum and the Datachain}
 \label{sec:datachain}
