--- a/sections/05-evaluation.tex
+++ b/sections/05-evaluation.tex
@@ -2,8 +2,9 @@
 
 \section{Ownership of Data}
 
-As discussed in Section \ref{sec:ownership-of-data}, Ownership of Data is an important aspect of the SAFE Network. Access to the \textit{Data Map} of data is what grants access to what is being stored on the network, revoke access or ``forget'' the credentials to the \textit{Data Map} and that data is irrecoverable. Users ``own'' the access to their data and nobody else does. This is what is so special about the architecture of the SAFE Network and what gives it unique opportunities for software development. Ownership of Data specifically means that you can give people access to data whilst retaining the sole right to its mutation. Think of a public blog for example. The creator, the account used to create the blog, ``owns'' the ability to edit the blog. They can the data as they please before their account stores the keys to the relevant \textit{Data Maps}. Other people can access the data if and only if the ``owner'' of the blog says they can. 
+As discussed in Section \ref{sec:ownership-of-data}, Ownership of Data is an important aspect of the SAFE Network. ``Users own their own data'' is a feature that the network strives to insure. Users at their discretion can choose to encrypt data or to allow public access to it. To keep Immutable Data private, a user will encrypt the \textit{Data Map} to the data. This means that only the person who has the key can access the data.
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
  \section{Cost Benefit}
  
  A huge benefit to anyone wanting to build a website or application is how much it costs to store data on the SAFE Network. Traditionally on the internet, you would need to pay for a server and also a domain name to be used. Depending on how much traffic the website gets you would need a more powerful server which costs more money. This is not the case on the SAFE Network, the only cost is in writing data. A user could publish a website or blog and it doesn't cost them a penny to keep it on the network, it will be available indefinitely.
